--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-runtime": "^6.6.1",
+    "bootstrap": "^3.3.6",
     "chai": "^3.5.0",
     "classnames": "^2.2.4",
     "css-loader": "^0.23.1",
     "enzyme": "^2.2.0",
     "eslint": "^2.8.0",
     "eslint-config-airbnb": "^8.0.0",
+    "eslint-import-resolver-webpack": "^0.2.4",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-import": "^1.5.0",
     "eslint-plugin-jsx-a11y": "^1.0.2",
