--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "eslint-plugin-import": "^1.5.0",
     "eslint-plugin-jsx-a11y": "^1.0.2",
     "eslint-plugin-react": "^5.0.1",
+    "gulp": "^3.9.1",
+    "gulp-awspublish": "^3.2.0",
     "history": "^2.1.0",
     "immutable": "^3.7.6",
     "jquery": "^2.2.3",
