--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-import": "^1.5.0",
     "eslint-plugin-jsx-a11y": "^1.0.2",
     "eslint-plugin-react": "^5.0.1",
+    "file-loader": "^0.8.5",
     "gulp": "^3.9.1",
     "gulp-awspublish": "^3.2.0",
     "history": "^2.1.0",
@@ -66,6 +67,7 @@
     "redux-thunk": "^2.0.1",
     "sinon": "^1.17.3",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1"
   }
